--- a/src/less/imports/gissettings.less
+++ b/src/less/imports/gissettings.less
@@ -44,3 +44,35 @@ form.form-inline.inline-form {
     }
   }
 }
+
+.marker-cluster-normal {
+  background-color: rgb(181, 226, 140);
+}
+.marker-cluster-normal div {
+  background-color: rgb(110, 204, 57);
+}
+
+.marker-cluster-alert {
+  background-color: rgb(253, 156, 115);
+}
+.marker-cluster-alert div {
+  background-color: rgb(241, 128, 23);
+}
+
+.marker-cluster {
+  background-clip: padding-box;
+  border-radius: 20px;
+}
+.marker-cluster div {
+  width: 40px;
+  height: 40px;
+  margin-left: 5px;
+  margin-top: 5px;
+
+  text-align: center;
+  border-radius: 15px;
+  font: 12px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+}
+.marker-cluster span {
+  line-height: 20px;
+}
