--- a/src/modules/broadcast/components/dashboard/index.html
+++ b/src/modules/broadcast/components/dashboard/index.html
@@ -1,1 +1,3 @@
-<div></div>
+<div ng-controller="modules/broadcast/components/dashboard/index">
+    <div leaflet tiles="mapTiles" markers="markers" layers="layers" style="height:600px" defaults="mapDefaults"></div>
+</div>
