--- a/src/css/acc.css
+++ b/src/css/acc.css
@@ -162,7 +162,7 @@ dl.dl-settings dd {
 .ng-table th.sortable.sort-asc,
 .ng-table th.sortable.sort-desc {
   background-color: rgba(141, 192, 219, 0.25);
-  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+  text-shadow: 0 1px 1px hsla(0, 0%, 100%, 0.75);
 }
 .ng-table th.sortable {
   cursor: pointer;
