--- a/src/modules/broadcast/components/terminal/list.html
+++ b/src/modules/broadcast/components/terminal/list.html
@@ -1,4 +1,4 @@
-<div- ng-controller="modules/broadcast/components/terminal/list">
+<div- ng-controller="modules/broadcast/components/terminal/list" ng-init="vm.load()">
     <section class="content-header">
         <h1>
             终端管理
