--- a/src/modules/broadcast/templates/areaNode.html
+++ b/src/modules/broadcast/templates/areaNode.html
@@ -1,6 +1,6 @@
-<div class="list-group-item" ng-click="vm.selectArea(area)" ng-class="{'active' : currentArea === area}">
+<div class="list-group-item" ng-click="vm.selectArea(area)" ng-class="{ 'active' : currentArea && currentArea.$key === area.$key }">
     <span class="glyphicon" ng-class="{ 'glyphicon-plus': collapsed, 'glyphicon-minus': !collapsed }" ng-click="this.toggle();$event.stopPropagation();"></span>
-    <span ui-tree-handle ng-bind="area.name"></span>
+    <span ui-tree-handle ng-bind="area.$data.name"></span>
     <span class="pull-right">
         <button class="btn btn-default btn-xs" ng-click="vm.editArea(this, $event)">
             <i class="glyphicon glyphicon-edit"></i>
@@ -10,6 +10,6 @@
         </button>
     </span>
 </div>
-<ol ui-tree-nodes ng-model="area.areas" ng-class="{hidden: collapsed}" ng-if="area.areas!==undefined">
-    <li ng-repeat="area in area.areas" ui-tree-node ng-include="'modules/broadcast/templates/areaNode.html'"></li>
+<ol ui-tree-nodes ng-model="area.$children" ng-class="{ hidden: collapsed }" ng-if="area.$children !== undefined">
+    <li ng-repeat="area in area.$children" ui-tree-node ng-include="'modules/broadcast/templates/areaNode.html'"></li>
 </ol>
