--- a/src/less/imports/common.less
+++ b/src/less/imports/common.less
@@ -229,3 +229,12 @@ dl.dl-settings {
     }
   }
 }
+
+/* box */
+.box-header {
+  > .box-tools-left {
+    position: absolute;
+    left: 10px;
+    top: 5px;
+  }
+}
