--- a/src/less/imports/common.less
+++ b/src/less/imports/common.less
@@ -238,3 +238,11 @@ dl.dl-settings {
     top: 5px;
   }
 }
+
+.have-pager {
+  .ng-table-pager {
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 5px;
+  }
+}
