--- a/src/less/imports/gissettings.less
+++ b/src/less/imports/gissettings.less
@@ -36,10 +36,12 @@ form.form-inline.inline-form {
   .form-group {
     width: 100%;
 
-    .control-label {
+    > .control-label {
       width: 20%;
     }
-    .form-control {
+    > .form-control,
+    > .input-group,
+    > .btn-group {
       width: 79%;
     }
   }
