--- a/src/modules/broadcast/components/dashboard/areaNode.html
+++ b/src/modules/broadcast/components/dashboard/areaNode.html
@@ -1,9 +1,11 @@
 <div class="list-group-item" ng-click="vm.selectArea(area)" ng-class="{ 'active' : currentArea && currentArea.$key === area.$key }">
     <span class="glyphicon" ng-class="{ 'glyphicon-plus': collapsed, 'glyphicon-minus': !collapsed }" ng-click="vm.toggleArea(this, $event)"></span>
-    <a href="">
+    <!-- <a href="">
         <i class="glyphicon glyphicon-unchecked"></i>
+    </a> -->
+    <a href="" ng-click="vm.toArea(this)">
+        <span ng-bind="area.$data.name"></span>
     </a>
-    <span ng-bind="area.$data.name"></span>
 </div>
 <ol ui-tree-nodes ng-model="area.$children" ng-class="{ hidden: collapsed }" ng-if="area.$children !== undefined">
     <li ng-repeat="area in area.$children" ui-tree-node data-collapsed="true" ng-include="'modules/broadcast/components/dashboard/areaNode.html'"></li>
