--- a/src/modules/broadcast/components/broadcast/areaNode.html
+++ b/src/modules/broadcast/components/broadcast/areaNode.html
@@ -1,7 +1,9 @@
-<div class="list-group-item" ng-click="vm.selectArea(area)" ng-class="{ 'active' : currentArea && currentArea.$key === area.$key }">
+<div class="list-group-item">
     <span class="glyphicon" ng-class="{ 'glyphicon-plus': collapsed, 'glyphicon-minus': !collapsed }" ng-click="vm.toggleArea(this, $event)"></span>
-    <a href="">
-        <i class="glyphicon glyphicon-unchecked"></i>
+    <a href="" ng-click="vm.checkArea(this)">
+        <i ng-show="!vm.isChecked(this)" class="glyphicon glyphicon-unchecked"></i>
+        <i ng-show="vm.isChecked(this)" class="glyphicon glyphicon-check"></i>
+        <!-- <i ng-show="area.checkStatus===2" class="glyphicon glyphicon-record"></i> -->
     </a>
     <a href="" ng-click="vm.toArea(this)">
         <span ng-bind="area.$data.name"></span>
