--- a/src/modules/broadcast/components/terminal/profileForm.html
+++ b/src/modules/broadcast/components/terminal/profileForm.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-controller="modules/broadcast/components/terminal/profileForm">
     <div class="modal-header">
         <a href="" class="close" ng-click="$dismiss()">&times;</a>
         <h4 class="modal-title">
@@ -6,7 +6,7 @@
         </h4>
     </div>
     <div class="modal-body">
-
+        <div bin-file></div>
     </div>
     <div class="modal-footer">
         <button class="btn btn-primary" ng-click="$close($data)">
