--- a/src/modules/broadcast/components/broadcast/areaNode.html
+++ b/src/modules/broadcast/components/broadcast/areaNode.html
@@ -1,5 +1,7 @@
 <div class="list-group-item">
-    <span class="glyphicon" ng-class="{ 'glyphicon-plus': collapsed, 'glyphicon-minus': !collapsed }" ng-click="vm.toggleArea(this, $event)"></span>
+    <span ng-show="area.$data.isDevice" class="glyphicon glyphicon-volume-up"></span>
+    <span ng-show="!area.$data.isDevice" class="glyphicon" ng-class="{ 'glyphicon-folder-close': collapsed, 'glyphicon-folder-open': !collapsed }"
+        ng-click="vm.toggleArea(this, $event)"></span>
     <a href="" ng-click="vm.checkArea(this)">
         <i ng-show="!vm.isChecked(this)" class="glyphicon glyphicon-unchecked"></i>
         <i ng-show="vm.isChecked(this)" class="glyphicon glyphicon-check"></i>
@@ -10,5 +12,5 @@
     </a>
 </div>
 <ol ui-tree-nodes ng-model="area.$children" ng-class="{ hidden: collapsed }" ng-if="area.$children !== undefined">
-    <li ng-repeat="area in area.$children" ui-tree-node data-collapsed="true" ng-include="'modules/broadcast/components/broadcast/areaNode.html'"></li>
+    <li ng-repeat="area in area.$children | orderBy: '-$data.isDevice'" ui-tree-node data-collapsed="true" ng-include="'modules/broadcast/components/broadcast/areaNode.html'"></li>
 </ol>
