--- a/src/modules/broadcast/components/broadcast/dailyList.html
+++ b/src/modules/broadcast/components/broadcast/dailyList.html
@@ -1,65 +1,78 @@
 <div ng-controller="modules/broadcast/components/broadcast/dailyList">
-    <section class="content-header">
-        <h1>
-            常规广播 <small>列表</small>
-        </h1>
-        <ol class="breadcrumb">
-            <li><a href=""><i class="fas fa-tachometer-alt"></i> 首页</a></li>
-            <li><a href="">常规广播</a></li>
-        </ol>
-    </section>
-    <section class="content">
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="box">
-                    <div class="box-header with-border">
-                        &nbsp;
-                        <div class="box-tools-left form-inline">
-                            <div ng-class="{ 'has-feedback': search.value==='', 'input-group': search.value!=='' }">
-                                <input class="form-control input-sm" placeholder="名称搜索" type="text" ng-change="vm.searchChanged()"
-                                    ng-model="search.value">
-                                <i class="text-muted glyphicon glyphicon-search form-control-feedback" ng-show="search.value===''"></i>
-                                <div class="input-group-btn" ng-show="search.value!==''">
-                                    <button class="btn btn-danger btn-sm" ng-click="vm.searchReset()">
-                                        <i class="glyphicon glyphicon-remove"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="box-tools">
-                            <div class="btn-group btn-group-sm">
-                                <button type="button" class="btn btn-default" ng-click="vm.save()">
-                                    <i class="glyphicon glyphicon-plus"></i> 新增
-                                </button>
-                                <button type="button" class="btn btn-default" ng-disabled="!selected" ng-click="vm.save(selected)">
-                                    <i class="glyphicon glyphicon-edit"></i> 编辑
-                                </button>
-                                <button type="button" class="btn btn-danger" ng-disabled="!selected" ng-click="vm.drop()">
-                                    <i class="glyphicon glyphicon-trash"></i> 删除
-                                </button>
-                            </div>
-                            <button type="button" class="btn btn-info btn-sm">
-                                <i class="fas fa-play"></i> 播放
-                            </button>
-                            <button type="button" class="btn btn-info btn-sm">
-                                <i class="fas fa-download"></i> 下装
-                            </button>
-                        </div>
-                    </div>
-                    <div class="box-body no-padding">
-                        <div class="table-responsive have-pager">
-                            <table class="table table-striped table-hover" ng-table="tableParams">
-                                <tr ng-repeat="row in $data" ng-class="{ 'info': selected.id===row.id }" ng-click='vm.select(row)'>
-                                    <td title="'序号'">{{row.id}}</td>
-                                    <td title="'名称'" sortable="'name'">{{row.name}}</td>
-                                    <td title="'播放时间'">{{row.playTime}}</td>
-                                    <td title="'状态'">{{row.status}}</td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
+  <section class="content-header">
+    <h1>常规广播 <small>列表</small></h1>
+    <ol class="breadcrumb">
+      <li>
+        <a href=""><i class="fas fa-tachometer-alt"></i> 首页</a>
+      </li>
+      <li><a href="">常规广播</a></li>
+    </ol>
+  </section>
+  <section class="content">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="box">
+          <div class="box-header with-border">
+            &nbsp;
+            <div class="box-tools-left form-inline">
+              <div ng-class="{ 'has-feedback': search.value==='', 'input-group': search.value!=='' }">
+                <input
+                  class="form-control input-sm"
+                  placeholder="名称搜索"
+                  type="text"
+                  ng-change="vm.searchChanged()"
+                  ng-model="search.value"
+                />
+                <i
+                  class="text-muted glyphicon glyphicon-search form-control-feedback"
+                  ng-show="search.value===''"
+                ></i>
+                <div class="input-group-btn" ng-show="search.value!==''">
+                  <button class="btn btn-danger btn-sm" ng-click="vm.searchReset()">
+                    <i class="glyphicon glyphicon-remove"></i>
+                  </button>
                 </div>
+              </div>
             </div>
+            <div class="box-tools">
+              <div class="btn-group btn-group-sm">
+                <button type="button" class="btn btn-default" ng-click="vm.save()">
+                  <i class="glyphicon glyphicon-plus"></i> 新增
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-default"
+                  ng-disabled="!selected"
+                  ng-click="vm.save(selected)"
+                >
+                  <i class="glyphicon glyphicon-edit"></i> 编辑
+                </button>
+                <button type="button" class="btn btn-danger" ng-disabled="!selected" ng-click="vm.drop()">
+                  <i class="glyphicon glyphicon-trash"></i> 删除
+                </button>
+              </div>
+              <button type="button" class="btn btn-info btn-sm"><i class="fas fa-play"></i> 播放</button>
+              <button type="button" class="btn btn-info btn-sm"><i class="fas fa-download"></i> 下装</button>
+            </div>
+          </div>
+          <div class="box-body no-padding">
+            <div class="table-responsive have-pager">
+              <table class="table table-striped table-hover" ng-table="tableParams">
+                <tr
+                  ng-repeat="row in $data"
+                  ng-class="{ 'info': selected.id===row.id }"
+                  ng-click="vm.select(row)"
+                >
+                  <td title="'序号'">{{ row.id }}</td>
+                  <td title="'名称'" sortable="'name'">{{ row.name }}</td>
+                  <td title="'播放时间'">{{ row.playTime }}</td>
+                  <td title="'状态'">{{ row.status }}</td>
+                </tr>
+              </table>
+            </div>
+          </div>
         </div>
-    </section>
+      </div>
+    </div>
+  </section>
 </div>
