--- a/src/modules/broadcast/components/terminal/profileForm.html
+++ b/src/modules/broadcast/components/terminal/profileForm.html
@@ -1,21 +1,19 @@
 <div ng-controller="modules/broadcast/components/terminal/profileForm">
-    <div class="modal-header">
-        <a href="" class="close" ng-click="$dismiss()">&times;</a>
-        <h4 class="modal-title">
-            <i class="glyphicon glyphicon-upload"></i> 配置文件
-        </h4>
-    </div>
-    <div class="modal-body">
-        <div bin-file ng-model="$data.file"></div>
-    </div>
-    <div class="modal-footer">
-        <button class="btn btn-primary" ng-click="$close($data)" ng-disabled="!$data.file || $data.file===''">
-            <i class="glyphicon glyphicon-ok-sign"></i>
-            确定
-        </button>
-        <button class="btn btn-default" ng-click="$dismiss()">
-            <i class="glyphicon glyphicon-remove-sign"></i>
-            取消
-        </button>
-    </div>
+  <div class="modal-header">
+    <a href="" class="close" ng-click="$dismiss()">&times;</a>
+    <h4 class="modal-title"><i class="glyphicon glyphicon-upload"></i> 配置文件</h4>
+  </div>
+  <div class="modal-body">
+    <div bin-file ng-model="$data.file"></div>
+  </div>
+  <div class="modal-footer">
+    <button class="btn btn-primary" ng-click="$close($data)" ng-disabled="!$data.file || $data.file===''">
+      <i class="glyphicon glyphicon-ok-sign"></i>
+      确定
+    </button>
+    <button class="btn btn-default" ng-click="$dismiss()">
+      <i class="glyphicon glyphicon-remove-sign"></i>
+      取消
+    </button>
+  </div>
 </div>
